# sdwan-lab-deployment-tool

./: .flake8  .gitignore  .mypy.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  rc-PATty-example.sh  rc-example.sh  sdwan-lab.py  test_csdwan.py
.github/: dependabot.yml
.github/workflows/: release.yml  scorecard.yml  test.yml
catalyst_sdwan_lab/: __init__.py  __main__.py  cli.py
catalyst_sdwan_lab/data/certs/: cacsr_details.txt  chainCA.pem  openssl-commands.md  rootCA.key  rootCA.pem  rootCA.srl  rootca_details.txt  signCA.csr  signCA.key  v3ext.cnf
catalyst_sdwan_lab/data/cml_lab_definition/backup/: controller-cloud-init.j2  edge-cloud-init.j2  manager-cloud-init.j2  validator-cloud-init.j2
catalyst_sdwan_lab/data/cml_lab_definition/deploy/: cml-base-topology.j2  controller-cloud-init.j2  manager-cloud-init.j2  sdrouting-cloud-init.j2  validator-cloud-init.j2
catalyst_sdwan_lab/data/cml_nodes_definition/: cat-sdwan-controller.yaml  cat-sdwan-edge.yaml  cat-sdwan-manager.yaml
catalyst_sdwan_lab/data/manager_configs/v1/feature_templates/: Default_Cisco_ISR4331_Interface_g0_0_0_V01.json  Default_Cisco_VPN_interface_GigabitEthernet6_V01.json  Default_EQUINIX_ICGW_CSR1000V_VPN0_DHCP_INTF_GE2.json  Default_GCP_C8000V_OMP_IPv46_V01.json  Default_SDBranch_Service_VPN1_V01.json  Factory_Default_UTD_Template.json  Factory_Default_vEdge_DHCP_Tunnel_Interface_V01.json  Factory_Default_vSmart_OMP_Template.json  Factory_Default_vSmart_vManage_System_Template.json  controller_basic_vpn0_eth1.json  edge_basic_vpn1.json  edge_basic_vpn1_gi3_dhcp.json
catalyst_sdwan_lab/data/manager_configs/v1/inventory/: feature_templates.json
catalyst_sdwan_lab/data/manager_configs/v1_ipdual/feature_templates/: Default_Azure_vWAN_C8000V_OMP_IPv46_V01.json  Default_C1111_VPN_Interface_ge_0_0_0_V01.json  Default_Cisco_ISR4331_Interface_g0_0_1_V01.json  Default_Cisco_VPN_interface_GigabitEthernet1_V01.json  Default_Cisco_VPN_interface_GigabitEthernet3_V01.json  Default_Cisco_VPN_interface_GigabitEthernet9_V01.json  Default_EQUINIX_ICGW_CSR1000V_VPN512.json  Default_MEGAPORT_ICGW_C8000V_VPN0_INTF_GE1_V01.json  Default_SDBranch_INET_INT_V01.json  Default_SDBranch_SVC_INT_V01.json  Default_SDBranch_VPN0_Template_V01.json  Default_SDBranch_vEdge_INET_INT_V01.json  Default_SDBranch_vEdge_MGMT_INT_V01.json  Default_SDBranch_vEdge_SVC_INT_V01.json  Default_Security_Cisco_V01.json  Factory_Default_Cisco_DHCP_Tunnel_Interface.json  Factory_Default_Cisco_OMP_ipv46_Template.json  Factory_Default_DC1_System.json  (+19 more)
catalyst_sdwan_lab/data/manager_configs/v1_ipv6/: server_info.json
catalyst_sdwan_lab/data/manager_configs/v2_ipv4/: server_info.json
catalyst_sdwan_lab/data/serial_files/: serialFile-v1.viptela
catalyst_sdwan_lab/tasks/: __init__.py  add.py  backup.py  delete.py  deploy.py  restore.py  setup.py  sign.py  utils.py
src/catalyst_sdwan_lab/: __init__.py  __main__.py  _mcp_adapter.py  cli.py  cml_client.py  manager_client.py  mcp_server.py  ssh_client.py
src/catalyst_sdwan_lab/data/certs/: signCA.pem
src/catalyst_sdwan_lab/data/cml_nodes_definition/: cat-sdwan-manager.yaml  cat-sdwan-validator.yaml
src/catalyst_sdwan_lab/data/serial_files/: serialFile.viptela
src/catalyst_sdwan_lab/tasks/: add.py  backup.py  delete.py  deploy.py  images.py  restore.py  setup.py  sign.py  utils.py
tests/: test_add.py  test_backup.py  test_delete.py  test_deploy.py  test_images.py  test_mcp_adapter.py  test_mcp_server.py  test_restore.py  test_setup.py  test_sign.py  test_ssh_client.py  test_utils.py
tests/integration/: conftest.py  test_workflow.py
(+396 files in other folders)
