[project]
name = "catalyst-sdwan-lab"
version = "3.0.0"
description = "Automation tool for Cisco Catalyst SD-WAN labs in CML"
authors = [{ name = "Tomasz Zarski", email = "tzarski@cisco.com" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "passlib>=1.7",
    "pyopenssl>=23.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "rich>=13.0",
    "typer>=0.12.0",
    "virl2-client>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sdwan-lab = "catalyst_sdwan_lab.cli:app"
csdwan = "catalyst_sdwan_lab.cli:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
