[project]
name = "catalyst-sdwan-lab"
version = "3.1.3"
description = "Automation tool for Cisco Catalyst SD-WAN labs in CML"
authors = [{ name = "Tomasz Zarski", email = "tzarski@cisco.com" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "cryptography>=49.0.0",
    "pyyaml>=6.0",
    "requests>=2.34.2",
    "rich>=13.0",
    "typer>=0.26.7",
    "virl2-client>=2.8.0",
    "paramiko>=5.0.0",
    "cisco-sdwan>=1.28",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]

[project.scripts]
sdwan-lab = "catalyst_sdwan_lab.cli:app"
csdwan = "catalyst_sdwan_lab.cli:app"
csdwan-mcp = "catalyst_sdwan_lab.mcp_server:main"

[build-system]
requires = ["uv_build>=0.11.22,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration"
markers = ["integration: live-system workflow test (requires env vars; run with: pytest tests/integration/)"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "websocket-client>=1.9.0",
    "mcp[cli]>=1.0.0",
]
